RESOLVED FIXED 153596
Modern IDB: Index uniqueness broken in the SQLite backend
https://bugs.webkit.org/show_bug.cgi?id=153596
Summary Modern IDB: Index uniqueness broken in the SQLite backend
Brady Eidson
Reported 2016-01-28 09:42:10 PST
Modern IDB: Index uniqueness broken in the SQLite backend
Attachments
Patch v1 (12.33 KB, patch)
2016-01-28 09:43 PST, Brady Eidson
achristensen: review+
commit-queue: commit-queue-
Patch for landing (12.22 KB, patch)
2016-01-28 10:56 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2016-01-28 09:43:33 PST
Created attachment 270122 [details] Patch v1
WebKit Commit Bot
Comment 2 2016-01-28 10:49:07 PST
Comment on attachment 270122 [details] Patch v1 Rejecting attachment 270122 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'build', '--no-clean', '--no-update', '--build-style=release', '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: rack.dia -c /Volumes/Data/EWS/WebKit/Source/WebCore/html/track/TextTrack.cpp -o /Volumes/Data/EWS/WebKit/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/x86_64/TextTrack.o ** BUILD FAILED ** The following build commands failed: CompileC /Volumes/Data/EWS/WebKit/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/x86_64/SQLiteIDBBackingStore.o Modules/indexeddb/server/SQLiteIDBBackingStore.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler (1 failure) Full output: http://webkit-queues.webkit.org/results/751447
Brady Eidson
Comment 3 2016-01-28 10:56:07 PST
Created attachment 270128 [details] Patch for landing
WebKit Commit Bot
Comment 4 2016-01-28 11:20:33 PST
Comment on attachment 270128 [details] Patch for landing Clearing flags on attachment: 270128 Committed r195765: <http://trac.webkit.org/changeset/195765>
WebKit Commit Bot
Comment 5 2016-01-28 11:20:37 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.