Modern IDB: Index uniqueness broken in the SQLite backend. https://bugs.webkit.org/show_bug.cgi?id=153596

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (Many failing tests now pass, others improve).

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::createIndex):
(WebCore::IDBServer::SQLiteIDBBackingStore::uncheckedHasIndexRecord):
(WebCore::IDBServer::SQLiteIDBBackingStore::uncheckedPutIndexKey):
(WebCore::IDBServer::SQLiteIDBBackingStore::updateOneIndexForAddRecord):
(WebCore::IDBServer::SQLiteIDBBackingStore::updateAllIndexesForAddRecord):
(WebCore::IDBServer::SQLiteIDBBackingStore::addRecord):
(WebCore::IDBServer::SQLiteIDBBackingStore::updateIndexesForAddRecord): Deleted.
* Modules/indexeddb/server/SQLiteIDBBackingStore.h:

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/171677@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195765 268f45cc-cd09-0410-ab3c-d52691b4dbfc